Update phpspec/phpspec to include the php7 error commit fix

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "symfony/polyfill-php70": "~1.1"
     },
     "require-dev":       {
-        "phpspec/phpspec":                       "~2.4",
+        "phpspec/phpspec":                       "dev-master#48e85b7f97f6a14c71e7a3eabfa819fee9e87139",
         "behat/behat":                           "~3.0",
         "coduo/phpspec-data-provider-extension": "~1.0",
         "fabpot/php-cs-fixer":                   "~1.11"
