--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: php
 
+sudo: false
+
+cache:
+  directories:
+    - $HOME/.composer/cache
+
 php:
   - 5.6
   - 7.0
@@ -10,7 +16,7 @@ env:
   - CALCULATOR=BCMath
   - CALCULATOR=Native
 
-before_script: composer install --dev --prefer-source
+before_script: composer update --prefer-dist
 
 script: bin/phpspec run -f pretty --verbose
 
