--- a/composer.json
+++ b/composer.json
@@ -36,5 +36,10 @@
     },
     "config":            {
         "bin-dir": "bin"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "3.0-dev"
+        }
     }
 }
