--- a/.travis.yml
+++ b/.travis.yml
@@ -6,21 +6,15 @@ cache:
   directories:
     - $HOME/.composer/cache
 
-matrix:
-    include:
-        - php: 7
-          env: deps=low
-        - php: 7
-    fast_finish: true
+php:
+  - 7.0
 
 env:
   - CALCULATOR=GMP
   - CALCULATOR=BCMath
   - CALCULATOR=Native
 
-before_script:
-  - if [ "$deps" == "low" ]; then composer update --prefer-source --prefer-lowest --prefer-stable; fi
-  - if [ "$deps" != "low" ]; then composer install --prefer-source; fi
+before_script: composer update --prefer-dist
 
 script: bin/phpspec run -f pretty --verbose
 
