Change my email, fix some CS problems

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "authors":           [
         {
             "name":  "Alexandru Furculita",
-            "email": "alex@rhetina.com"
+            "email": "alex@furculita.net"
         }
     ],
     "require":           {
