--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ before_script: composer update --prefer-dist
 script: bin/phpspec run -f pretty --verbose
 
 notifications:
-    email: "alex@rhetina.com"
+    email: "alex@furculita.net"
