--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "require-dev":       {
         "phpspec/phpspec":                       "2.*",
         "fabpot/php-cs-fixer":                   "~1.11",
-        "coduo/phpspec-data-provider-extension": "1.0.*"
+        "coduo/phpspec-data-provider-extension": "1.0.*",
+        "bossa/phpspec2-expect": "^1.0"
     },
     "autoload":          {
         "psr-4": {
