--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
     },
     "require-dev":       {
         "phpspec/phpspec":                       "2.*",
-        "fabpot/php-cs-fixer":                   "~1.11",
+        "friendsofphp/php-cs-fixer":             "^1.11",
         "coduo/phpspec-data-provider-extension": "1.0.*",
-        "bossa/phpspec2-expect": "^1.0"
+        "bossa/phpspec2-expect":                 "^1.0"
     },
     "autoload":          {
         "psr-4": {
