--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,33 @@
 language: php
 
-sudo: false
-
-cache:
-  directories:
-    - $HOME/.composer/cache
-
 php:
   - 5.5
   - 5.6
   - 7.0
   - hhvm
 
+# This triggers builds to run on the new TravisCI infrastructure.
+# See: http://docs.travis-ci.com/user/workers/container-based-infrastructure/
+sudo: false
+
+## Cache composer
+cache:
+  directories:
+    - $HOME/.composer/cache
+
 env:
   - CALCULATOR=GMP
   - CALCULATOR=BCMath
   - CALCULATOR=Native
 
-before_script: composer update --prefer-dist
+matrix:
+  include:
+    - php: 5.5
+      env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
+
+before_script:
+  - travis_retry composer self-update
+  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist
 
 script: bin/phpspec run -f pretty --verbose
 
