--- a/composer.json
+++ b/composer.json
@@ -1,52 +1,55 @@
 {
-    "name":              "arkitekto/math",
-    "description":       "PHP library for arbitrary precision arithmetic, operating on signed integers, rational numbers, and floating-point numbers",
-    "minimum-stability": "dev",
-    "prefer-stable":     true,
-    "license":           "MIT",
-    "keywords":          [
+    "name":         "arkitekto/math",
+    "type":         "library",
+    "description":  "PHP library for arbitrary precision arithmetic, operating on signed integers, rational numbers, and floating-point numbers",
+    "keywords":     [
         "floating-point",
         "arithmetic",
         "math",
         "rational",
         "number",
         "integer",
-        "big-integer"
+        "big-integer",
+        "arkitekto"
     ],
-    "authors":           [
+    "homepage":     "http://github.com/arkitekto/math",
+    "license":      "MIT",
+    "authors":      [
         {
-            "name":  "Alexandru Furculita",
-            "email": "alex@furculita.net"
+            "name":     "Alexandru Furculita",
+            "email":    "alex@furculita.net",
+            "homepage": "http://alex.furculita.net",
+            "role":     "Developer"
         }
     ],
-    "require":           {
+    "require":      {
         "php":                    "~5.5|~7.0",
         "symfony/polyfill-php70": "~1.1"
     },
-    "require-dev":       {
+    "require-dev":  {
         "phpspec/phpspec":                       "2.*",
         "friendsofphp/php-cs-fixer":             "^1.11",
         "coduo/phpspec-data-provider-extension": "1.0.*",
         "bossa/phpspec2-expect":                 "^1.0"
     },
-    "autoload":          {
+    "autoload":     {
         "psr-4": {
             "Arki\\Math\\": "src/"
         }
     },
-    "autoload-dev":      {
+    "autoload-dev": {
         "psr-4": {
             "spec\\Arki\\Math\\": "spec/"
         }
     },
-    "suggest":           {
+    "suggest":      {
         "ext-bcmath": "Install the BCMath (Binary Calculator) extension in order to speed up arbitrary precision integer arithmetic operations.",
         "ext-gmp":    "Install the GMP (GNU Multiple Precision) extension in order to speed up arbitrary precision integer arithmetic operations. GMP seems to be faster than BCMath: http://phpseclib.sourceforge.net/math/intro.html"
     },
-    "config":            {
-        "bin-dir": "bin"
+    "scripts": {
+        "test": "vendor/bin/phpspec run -f pretty"
     },
-    "extra":             {
+    "extra":        {
         "branch-alias": {
             "dev-master": "1.0-dev"
         }
