--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         "ext-gmp":    "Install the GMP (GNU Multiple Precision) extension in order to speed up arbitrary precision integer arithmetic operations. GMP seems to be faster than BCMath: http://phpseclib.sourceforge.net/math/intro.html"
     },
     "scripts": {
-        "test": "vendor/bin/phpspec run -f pretty"
+        "test": "vendor/bin/phpspec run -f pretty --verbose"
     },
     "extra":        {
         "branch-alias": {
